factory 성공 실패 자원소모 api추가
